Updated index.html full skeleton of content

--- a/index.html
+++ b/index.html
@@ -5,40 +5,78 @@
 <meta name="description" content=" Arianna Marin's proposal for limbo position in between 'web developer intern' and 'entry level front end web developer".">
 </head>
 <body>
+<header>
+<img>insert an image of yourself here</img>
 <h1>Hello Efelle! My name is Arianna.</h1>
+<header>
 <nav>
   <ul>
-  <li><a href="#Objective">Objective</a></li>
-  <li><a href="#About">About</a></li>
-  <li><a href="#Coursework">Coursework</a></li>
-  <li><a href="#Experience">Objective</a></li>
+  <li><a href="#Obj">Objective</a></li>
+  <li><a href="#Abt">About</a></li>
+  <li><a href="#Edu">Education</a></li>
+  <li><a href="#Cour">Coursework</a></li>
+  <li><a href="#Skills">Skillset</a></li>
   <li><a href="#Details">Details</a></li>
 </nav>
-<h2>Objective</h2>
-<p>Describe objective of this webpage. Efelle oriented skills and values. About 3 sentences.</p>
-<h2>About</h2>
-<p>Brief paragraph about Arianna including background, interests, and hobbies. About 4-5 sentences.<p>
-<h2>Education</h2>
-  <ul>
-    <li>Currently: Seattle University Web Development Certificate Program Anticipated Graduation: Fall 2016</li>
-    <li>Savannah College of Art and Design. BFA in Photography, minor in Graphic Design Graduate: Nov 2013</li>
-    <li>Study Abraod Hong Kong- Winter 2014</li>
+<section id="Obj">
+  <h2>Objective</h2>
+  <p>Describe objective of this webpage. Efelle oriented skills and values. About 3 sentences.</p>
+</section>
+<section id="abt">
+  <h2>About</h2>
+  <p>Brief paragraph about Arianna including background, interests, and hobbies. About 4-5 sentences.<p>
+</section>
+<section id="edu">
+  <h2>Education</h2>
+    <ul>
+      <li>Currently: Seattle University Web Development Certificate Program Anticipated Graduation: Fall 2016</li>
+      <li>Savannah College of Art and Design. BFA in Photography, minor in Graphic Design Graduate: Nov 2013</li>
+      <li>Study Abraod Hong Kong- Winter 2014</li>
+    </ul>
+</section>    
+<section id="cour">    
+    <h2>Relevant Coursework</h2>
+    <ul>Current Classes
+      <li>WATS 1000- brief description</li>
+      <li>WATS 1010-brief description</li>
+    </ul>
+    <ul>Next Quarter
+      <li>Class Name-brief description<li>
+      <li>Class Name-brief description</li>
+    </ul>
+    <ul>Summer and Fall Quarters
+      <li>Class name-brief description</li>
+      <li>class name-brief description</li>
+      <li>class name-brief description</li>
+      <li>Class name-brief description</li>
+    </ul>
+</section>
+<section id="skils">
+  <h2>Skills</h2>
+  <p>Paragraph explaining that job history/experience isn't necessarily releveant as it is mostly admin/retail.</p>
+  <ul>General Skills
+    <li>Customer Service- over 3+ years of customer service<li>
+    <li>Teamwork- give examples</li>
+    <li>Organization-give examples</li>
+    <li>avid learner (quick learner) -give examples</li>
+    <li>active listener-give examples</li>
   </ul>
-  <h2>Relevant Coursework</h2>
-  <ul>Current Classes
-    <li>WATS 1000- brief description</li>
-    <li>WATS 1010-brief description</li>
+  <ul>Technical Skills
+    <li>Adobe Photoshop, Illustrator, InDesign</li>
+    <li>Photography</li>
+    <li>HTML5, CSS3,/li>
+    <li>Version Control: Git, Github</li>
+    <li>Markdown</li>
   </ul>
-  <ul>Next Quarter
-    <li>Class Name-brief description<li>
-    <li>Class Name-brief description</li>
-  </ul>
-  <ul>Summer and Fall Quarters
-    <li>Class name-brief description</li>
-    <li>class name-brief description</li>
-    <li>class name-brief description</li>
-    <li>Class name-brief description</li>
-  </ul>
-  
+  </section>
+<section id="Details">
+  <h2>Details</h2>
+  <p>Describe position details. Rate of pay, hours, etc. What you have to offer aka what you bring to the table.</p>
+</section>
+<footer>
+<h2>Thank you for taking the time to learn more about me, I look forward to hearing from you.<h2>
+<p>Arianna Marin 2016</p>
+<p>Font Credit:</p>
+</footer>
 <body>
 </html>
