added email link placement

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <header>
 <img>insert an image of yourself here</img>
 <h1>Hello Efelle! My name is Arianna.</h1>
+<h2>Email Me! insert mailto email address</h2>
 <header>
 <nav>
   <ul>
@@ -75,6 +76,7 @@
 </section>
 <footer>
 <h2>Thank you for taking the time to learn more about me, I look forward to hearing from you.<h2>
+<3>Email Me: Insert mailto link to email address</h3>
 <p>Arianna Marin 2016</p>
 <p>Font Credit:</p>
 </footer>
