css and image files added

--- a/index.html
+++ b/index.html
@@ -3,29 +3,34 @@
 <head>
 <title>Arianna Marin- Web Dev Position</title>
 <meta name="description" content=" Arianna Marin's proposal for limbo position in between 'web developer intern' and 'entry level front end web developer">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="css/native.css">
+<link rel="stylesheet" href="css/reset.css">
 </head>
+
 <body>
-<header>
-<img>insert an image of yourself here</img>
-<h1>Hello Efelle! My name is Arianna.</h1>
-<a href="mailto:marin.arianna@gmail.com" target="_top">Email Me</a>
-<header>
-<nav>
-  <ul>
-  <li><a href="#Obj">Objective</a></li>
-  <li><a href="#Abt">About</a></li>
-  <li><a href="#Edu">Education</a></li>
-  <li><a href="#Cour">Coursework</a></li>
-  <li><a href="#Skills">Skillset</a></li>
-  <li><a href="#Details">Details</a></li>
-</nav>
-<section id="Obj">
-  <h2>Objective</h2>
-  <p>Degreed web development student looking to apply my current robust skills in HTML and CSS towards real-world application. Seeking to utilize my evolving ablilites in a busy work environment while gaining experience in the web development industry. I am self-motivated and I am passionate about programming, learning,  and service which I think matches well with Efelle's values.</p>
-</section>
+
+  <header>
+    <img src="https://farm2.staticflickr.com/1640/24988315076_7752fd8019_q.jpg" alt="headshot of Arianna Marin">
+    <h1>Hello Efelle! My name is Arianna.</h1>
+    <a href="mailto:marin.arianna@gmail.com" target="_top">Email Me</a>
+  <nav>
+    <ul>
+      <li><a href="#obj">Objective</a></li>
+      <li><a href="#abt">About</a></li>
+      <li><a href="#edu">Education</a></li>
+      <li><a href="#cour">Coursework</a></li>
+      <li><a href="#skills">Skillset</a></li>
+    <li><a href="#details">Details</a></li>
+  </nav>
+  </header>
+    <section id="obj">
+      <h2>Objective</h2>
+      <p>Degreed web development student looking to apply my current robust skills in HTML and CSS towards real-world application. Seeking to utilize my evolving ablilites in a busy work environment while gaining experience in the web development industry. I am self-motivated and I am passionate about programming, learning,  and service which I think matches well with Efelle's values.</p>
+  </section>
 <section id="abt">
   <h2>About</h2>
-  <p>Brief paragraph about Arianna including background, interests, and hobbies. About 4-5 sentences.<p>
+  <p>I am currently taking classes at Seattle University to become a web developer. <p>
 </section>
 <section id="edu">
   <h2>Education</h2>
@@ -51,9 +56,9 @@
       <li>Professional Practice</li>
       <li>Web Development Capstone Project</li>
     </ul>
-      <p>Go <a href="http://webdev.seattleu.edu/courses.html">here</a> for a more detailed description of courses</p> 
+      <p>Click <a href="http://webdev.seattleu.edu/courses.html">here</a> for course description in detail</p> 
 </section>
-<section id="skils">
+<section id="skills">
   <h2>Skills</h2>
   <p>The past jobs I've held have been primarily in adminstration and retail. Skills from these industries do not directly translate to the skills needed for a web developer. However, I still posess useful skills and experience because of this. See examples below:</p>
   <ul>General Skills
@@ -71,12 +76,13 @@
     <li>Markdown</li>
   </ul>
   </section>
-<section id="Details">
+<section id="details">
   <h2>Details</h2>
   <p>Proposed Rate of Pay: $18-20/hr Proposed Weekly Commitment: 25-35hrs Rate of pay is based on fact that I am a non-traditional student. I already have a degree and one of the subjects (Graphic Design) can be directly applied to my work as a trainee web developer. I am over the traditional intern age and I support myself, I am not supported by my parents. Proposed weekly commitment is under 40 hours. This is so I am able to spend more time on making great projects in my schoolwork. It is flexible since some weeks may be busier or slower than others. Every minute of my paid time will be put to good use. For example, if there is nothing to work on programming wise I am open to taking on administrative or creative tasks. I noticed "Agency Life" section of your website is empty. Because I also studied photography I could create content for that in the way of photography.</p>
   <h2>Social Impact</h2>
   <p>I noticed that you have a lot of women looking at your firm. You're probably already aware of the imbalance in the web development industry of men to women and white/Asian people to any other race. I am enthusistic about breaking that mold of what a developer is. Social movements like "#ILookLikeanEngineer" particularly resonate with me and I am eager to contribute to a field in which I am not well represented.</p>
 </section>
+
 <footer>
 <h2>Thank you for taking the time to learn more about me. Thank you for considering me to be a part of the efelle family. I look forward to hearing from you.<h2>
 <a href="mailto:marin.arianna@gmail.com" target="_top">Email Me</a>
