headers styled, header title styled

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 
 <body>
 
-  <header>
-    <img src="https://farm2.staticflickr.com/1640/24988315076_7752fd8019_q.jpg" alt="headshot of Arianna Marin">
+  <header class="Posit">
+    <img src="images/self.png" alt="headshot of Arianna Marin">
     <h1>Hello Efelle! My name is Arianna.</h1>
     <a href="mailto:marin.arianna@gmail.com" target="_top">Email Me</a>
   <nav>
@@ -26,11 +26,11 @@
   </header>
     <section id="obj">
       <h2>Objective</h2>
-      <p>Degreed web development student looking to apply my current robust skills in HTML and CSS towards real-world application. Seeking to utilize my evolving ablilites in a busy work environment while gaining experience in the web development industry. I am self-motivated and I am passionate about programming, learning,  and service which I think matches well with Efelle's values.</p>
+      <p>To gain personal satisfaction as web development trainee, a position in which I am constantly learning, adapting to change, and being challenged. I already have a creative degree. I am currently studing web development and would like to apply my robust HTML/CSS skills towards real-world application. Seeking to utilize my evolving ablilites in a busy work environment while gaining experience in the web development industry.</p>
   </section>
 <section id="abt">
   <h2>About</h2>
-  <p>I am currently taking classes at Seattle University to become a web developer. <p>
+  <p>I am currently taking classes at Seattle University to become a web developer. I am self-motivated and I am passionate about programming, learning,  and service which I think matches well with Efelle's values. <p>
 </section>
 <section id="edu">
   <h2>Education</h2>
