design overhaul new design skeleton

--- a/index.html
+++ b/index.html
@@ -1,93 +1,103 @@
 <!DOCTYPE html>
 <html>
-<head>
-<title>Arianna Marin- Web Dev Position</title>
-<meta name="description" content=" Arianna Marin's proposal for limbo position in between 'web developer intern' and 'entry level front end web developer">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="css/native.css">
-<link rel="stylesheet" href="css/reset.css">
-</head>
+  <head>
+  <title>Arianna Marin- Web Dev Position</title>
+  <meta name="description" content=" Arianna Marin's proposal for limbo position in between 'web developer intern' and 'entry level front end web developer">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="css/native.css">
+  <link rel="stylesheet" href="css/reset.css">
+  </head>
 
 <body>
 
-  <header class="Posit">
+  <header>
     <img src="images/self.png" alt="headshot of Arianna Marin">
     <h1>Hello Efelle! My name is Arianna.</h1>
-    <a href="mailto:marin.arianna@gmail.com" target="_top">Email Me</a>
-  <nav>
-    <ul>
-      <li><a href="#obj">Objective</a></li>
-      <li><a href="#abt">About</a></li>
-      <li><a href="#edu">Education</a></li>
-      <li><a href="#cour">Coursework</a></li>
-      <li><a href="#skills">Skillset</a></li>
-    <li><a href="#details">Details</a></li>
-  </nav>
-  </header>
-    <section id="obj">
-      <h2>Objective</h2>
+    <h2>Objective</h2>
       <p>To gain personal satisfaction as web development trainee, a position in which I am constantly learning, adapting to change, and being challenged. I already have a creative degree. I am currently studing web development and would like to apply my robust HTML/CSS skills towards real-world application. Seeking to utilize my evolving ablilites in a busy work environment while gaining experience in the web development industry.</p>
-  </section>
-<section id="abt">
-  <h2>About</h2>
-  <p>I am currently taking classes at Seattle University to become a web developer. I am self-motivated and I am passionate about programming, learning,  and service which I think matches well with Efelle's values. <p>
-</section>
-<section id="edu">
-  <h2>Education</h2>
-    <ul>
-      <li>Currently: <a href="http//:webdev.seattleu.edu/">Seattle University Web Development Certificate Program Anticipated Graduation</a>: Fall 2016</li>
-      <li>Savannah College of Art and Design. BFA in Photography, Graphic Design minor Graduated: Nov 2013</li>
-      <li>Study Abraod Hong Kong- Winter 2014</li>
-    </ul>
-</section>    
-<section id="cour">    
-    <h2>Relevant Coursework</h2>
-    <ul>Current Classes
-      <li>Foundations of the Web-Intro to the Internet and the World Wide Web</li>
-      <li>Intro to Web Development- basic principles of web development, intro to HTML and CSS</li>
-    </ul>
-    <ul>Next Quarter
-      <li>Intro to Javascript Programming for the Web<li>
-      <li>Intro to Servers and Hosting</li>
-    </ul>
-    <ul>Summer and Fall Quarters
-      <li>Building Javascript Applications for the Web</li>
-      <li>User Science and Testing</li>
-      <li>Professional Practice</li>
-      <li>Web Development Capstone Project</li>
-    </ul>
-      <p>Click <a href="http://webdev.seattleu.edu/courses.html">here</a> for course description in detail</p> 
-</section>
-<section id="skills">
-  <h2>Skills</h2>
-  <p>The past jobs I've held have been primarily in adminstration and retail. Skills from these industries do not directly translate to the skills needed for a web developer. However, I still posess useful skills and experience because of this. See examples below:</p>
-  <ul>General Skills
-    <li>Over 3+ years of customer service. I am comfortable talking to people in a pleasant, professional manner. I am comfortable resolving conflicts with customers.<li>
-    <li>Teamwork. I have experience working in small teams and coordinating with people in order to create an effiecient and transparent work environment.</li>
-    <li>Organization. At my current job I have to manage various orders, filing, and tasks for a group of people. This forces me to be organized, things have to be ordered on time without gaps in supplies and my workspace has to be clear so other people can easily navigate it.</li>
-    <li>Avid, Passionate learner. I love learning about web development. I don't get frustrated easily and I see every obstacle as an opportunity to learn. Working on class projects and practicing programming on my own is exciting to me.</li>
-    <li>active listener-give examples</li>
-  </ul>
-  <ul>Technical Skills
-    <li>Adobe Photoshop, Illustrator, InDesign</li>
-    <li>Photography</li>
-    <li>HTML5, CSS3</li>
-    <li>Version Control: Git, Github</li>
-    <li>Markdown</li>
-  </ul>
-  </section>
-<section id="details">
-  <h2>Details</h2>
-  <p>Proposed Rate of Pay: $18-20/hr Proposed Weekly Commitment: 25-35hrs Rate of pay is based on fact that I am a non-traditional student. I already have a degree and one of the subjects (Graphic Design) can be directly applied to my work as a trainee web developer. I am over the traditional intern age and I support myself, I am not supported by my parents. Proposed weekly commitment is under 40 hours. This is so I am able to spend more time on making great projects in my schoolwork. It is flexible since some weeks may be busier or slower than others. Every minute of my paid time will be put to good use. For example, if there is nothing to work on programming wise I am open to taking on administrative or creative tasks. I noticed "Agency Life" section of your website is empty. Because I also studied photography I could create content for that in the way of photography.</p>
-  <h2>Social Impact</h2>
-  <p>I noticed that you have a lot of women looking at your firm. You're probably already aware of the imbalance in the web development industry of men to women and white/Asian people to any other race. I am enthusistic about breaking that mold of what a developer is. Social movements like "#ILookLikeanEngineer" particularly resonate with me and I am eager to contribute to a field in which I am not well represented.</p>
-</section>
+    <a href="mailto:marin.arianna@gmail.com" target="_top">Contact</a>
+  </header>
 
-<footer>
-<h2>Thank you for taking the time to learn more about me. Thank you for considering me to be a part of the efelle family. I look forward to hearing from you.<h2>
-<a href="mailto:marin.arianna@gmail.com" target="_top">Email Me</a>
-<p>Arianna Marin 2016</p>
-<p>Font Credit:</p>
-</footer>
+  <div id="lcontainer">
+
+      <section class="dark">
+          <h2>About</h2>
+          <p>I am currently taking classes at Seattle University to become a web developer. I am self-motivated and I am passionate about programming, learning,  and service which I think matches well with Efelle's values. <p>
+      </section>
+
+      <section class="light">
+          <h2>Skills</h2>
+          <p>The past jobs I've held have been primarily in adminstration and retail. Skills from these industries do not directly translate to the skills needed for a web developer. However, I still posess useful skills and experience because of this. See examples below:</p>
+          <ul>General Skills
+            <li>Over 3+ years of customer service. I am comfortable talking to people in a pleasant, professional manner. I am comfortable resolving conflicts with customers.<li>
+            <li>Teamwork. I have experience working in small teams and coordinating with people in order to create an effiecient and transparent work environment.</li>
+            <li>Organization. At my current job I have to manage various orders, filing, and tasks for a group of people. This forces me to be organized, things have to be ordered on time without gaps in supplies and my workspace has to be clear so other people can easily navigate it.</li>
+            <li>Avid, Passionate learner. I love learning about web development. I don't get frustrated easily and I see every obstacle as an opportunity to learn. Working on class projects and practicing programming on my own is exciting to me.</li>
+            <li>active listener-give examples</li>
+          </ul>
+          <ul>Technical Skills
+            <li>Adobe Photoshop, Illustrator, InDesign</li>
+            <li>Photography</li>
+            <li>HTML5, CSS3</li>
+            <li>Version Control: Git, Github</li>
+            <li>Markdown</li>
+          </ul>      
+      </section>  
+
+      <section class="dark">
+          <h2>Details</h2>
+          <p>Proposed Rate of Pay: $19-21/hr. Weekly Commitment: 25-35hrs. Rate of pay is based on fact that I am a non-traditional student. I already have a degree and one of the subjects (Graphic Design) can be directly applied to my work as a trainee web developer. I am over the traditional intern age and I support myself, I am not supported by my parents. Proposed weekly commitment is under 40 hours. This is so I am able to spend more time on making great projects in my schoolwork. It is flexible since some weeks may be busier or slower than others. Every minute of my paid time will be put to good use. For example, if there is nothing to work on programming wise I am open to taking on administrative or creative tasks. I noticed "Agency Life" section of your website is empty. Because I also studied photography I could create content for that in the way of photography.</p>
+      </section>
+
+</div>
+
+
+<div id="rcontainer">
+
+      <section class="light">
+        <h2>Education</h2>
+        <ul>
+          <li>Currently: Seattle University <a href="http//:webdev.seattleu.edu/">Web Development Certificate Program</a>Anticipated Graduation: Fall 2016</li>
+          <li>Savannah College of Art and Design. BFA in Photography, Graphic Design minor Graduated: Nov 2013</li>
+          <li>Study Abraod Hong Kong- Winter 2014</li>
+        </ul>
+
+        <h2>Relevant Coursework</h2>
+        <ul>Current Classes
+          <li>Foundations of the Web-Intro to the Internet and the World Wide Web</li>
+          <li>Intro to Web Development- basic principles of web development, intro to HTML and CSS</li>
+        </ul>
+        <ul>Next Quarter
+          <li>Intro to Javascript Programming for the Web<li>
+          <li>Intro to Servers and Hosting</li>
+        </ul>
+        <ul>Summer and Fall Quarters
+          <li>Building Javascript Applications for the Web</li>
+          <li>User Science and Testing</li>
+          <li>Professional Practice</li>
+          <li>Web Development Capstone Project</li>
+        </ul>
+        <p>Click <a href="http://webdev.seattleu.edu/courses.html">here</a> for course description in detail</p> 
+      </section>
+  
+      <section class="dark">
+        <h2>Projects</h2>
+        <p></p>
+      </section>
+      
+      <section class="light">
+        <h2>Social Impact</h2>
+        <p>I noticed that you have a lot of women looking at your firm. You're probably already aware of the imbalance in the web development industry of men to women and white/Asian people to any other race. I am enthusistic about breaking that mold of what a developer is. Social movements like "#ILookLikeanEngineer" particularly resonate with me and I am eager to contribute to a field in which I am not well represented.</p>      
+      </section>
+</div>
+
+
+  <footer>
+    <h2>Thank you for taking the time to learn more about me. Thank you for considering me to be a part of the efelle family. I look forward to hearing from you.<h2>
+    <a href="mailto:marin.arianna@gmail.com" target="_top">Email Me</a>
+    <p>Arianna Marin 2016</p>
+    <p>Font Credit:</p>
+  </footer>
+
 <body>
 </html>
