blur header in background

--- a/index.html
+++ b/index.html
@@ -10,12 +10,15 @@
 
 <body>
 
+  <div id="blur">
+    this is a background image
+  </div>
   <header>
     <img src="images/self.png" alt="headshot of Arianna Marin">
     <h1>Hello Efelle! My name is Arianna.</h1>
     <h2>Objective</h2>
       <p>To gain personal satisfaction as web development trainee, a position in which I am constantly learning, adapting to change, and being challenged. I already have a creative degree. I am currently studing web development and would like to apply my robust HTML/CSS skills towards real-world application. Seeking to utilize my evolving ablilites in a busy work environment while gaining experience in the web development industry.</p>
-    <a href="mailto:marin.arianna@gmail.com" target="_top">Contact</a>
+    <a href="mailto:marin.arianna@gmail.com" target="_top" class="btn">Email</a>
   </header>
 
   <div id="lcontainer">
@@ -46,7 +49,7 @@
 
       <section class="dark">
           <h2>Details</h2>
-          <p>Proposed Rate of Pay: $19-21/hr. Weekly Commitment: 25-35hrs. Rate of pay is based on fact that I am a non-traditional student. I already have a degree and one of the subjects (Graphic Design) can be directly applied to my work as a trainee web developer. I am over the traditional intern age and I support myself, I am not supported by my parents. Proposed weekly commitment is under 40 hours. This is so I am able to spend more time on making great projects in my schoolwork. It is flexible since some weeks may be busier or slower than others. Every minute of my paid time will be put to good use. For example, if there is nothing to work on programming wise I am open to taking on administrative or creative tasks. I noticed "Agency Life" section of your website is empty. Because I also studied photography I could create content for that in the way of photography.</p>
+          <p>Proposed Rate of Pay: $20-30/hr. Weekly Commitment: 25-35hrs. Rate of pay is based on fact that I am a non-traditional student. I already have a degree and one of the subjects (Graphic Design) can be directly applied to my work as a trainee web developer. I am over the traditional intern age and I support myself, I am not supported by my parents. Proposed weekly commitment is under 40 hours. This is so I am able to spend more time on making great projects in my schoolwork. It is flexible since some weeks may be busier or slower than others. Every minute of my paid time will be put to good use. For example, if there is nothing to work on programming wise I am open to taking on administrative or creative tasks. I noticed "Agency Life" section of your website is empty. Because I also studied photography I could create content for that in the way of photography.</p>
       </section>
 
 </div>
@@ -57,7 +60,7 @@
       <section class="light">
         <h2>Education</h2>
         <ul>
-          <li>Currently: Seattle University <a href="http//:webdev.seattleu.edu/">Web Development Certificate Program</a>Anticipated Graduation: Fall 2016</li>
+          <li>Currently: Seattle University <a href="http//:webdev.seattleu.edu/">Web Development Certificate Program</a> Anticipated Graduation: Fall 2016</li>
           <li>Savannah College of Art and Design. BFA in Photography, Graphic Design minor Graduated: Nov 2013</li>
           <li>Study Abraod Hong Kong- Winter 2014</li>
         </ul>
@@ -94,7 +97,7 @@
 
   <footer>
     <h2>Thank you for taking the time to learn more about me. Thank you for considering me to be a part of the efelle family. I look forward to hearing from you.<h2>
-    <a href="mailto:marin.arianna@gmail.com" target="_top">Email Me</a>
+    <a href="mailto:marin.arianna@gmail.com" target="_top" class="btn">Email Me</a>
     <p>Arianna Marin 2016</p>
     <p>Font Credit:</p>
   </footer>
