new blur bg image added, btns added

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
   <title>Arianna Marin- Web Dev Position</title>
-  <meta name="description" content=" Arianna Marin's proposal for limbo position in between 'web developer intern' and 'entry level front end web developer">
+  <meta name="description" content=" Arianna Marin's proposal for limbo position in between web developer intern and entry level front end web developer">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="css/native.css">
   <link rel="stylesheet" href="css/reset.css">
@@ -15,10 +15,10 @@
   </div>
   <header>
     <img src="images/self.png" alt="headshot of Arianna Marin">
-    <h1>Hello Efelle! My name is Arianna.</h1>
-    <h2>Objective</h2>
+    <h1>Hello efelle, I'm Arianna: training web developer</h1>
+    <h2>Objective:</h2>
       <p>To gain personal satisfaction as web development trainee, a position in which I am constantly learning, adapting to change, and being challenged. I already have a creative degree. I am currently studing web development and would like to apply my robust HTML/CSS skills towards real-world application. Seeking to utilize my evolving ablilites in a busy work environment while gaining experience in the web development industry.</p>
-    <a href="mailto:marin.arianna@gmail.com" target="_top" class="btn">Email</a>
+    <a href="mailto:marin.arianna@gmail.com" target="_top" class="btn">Email Arianna</a>
   </header>
 
   <div id="lcontainer">
@@ -60,27 +60,27 @@
       <section class="light">
         <h2>Education</h2>
         <ul>
-          <li>Currently: Seattle University <a href="http//:webdev.seattleu.edu/">Web Development Certificate Program</a> Anticipated Graduation: Fall 2016</li>
-          <li>Savannah College of Art and Design. BFA in Photography, Graphic Design minor Graduated: Nov 2013</li>
-          <li>Study Abraod Hong Kong- Winter 2014</li>
+          <li>Currently: Seattle University <a href="http//:webdev.seattleu.edu/">Web Development Certificate Program</a> <br>Anticipated Graduation: Fall 2016</li>
+          <li>Savannah College of Art and Design: BFA in Photography/Graphic Design minor <br>Graduated: Nov 2013</li>
+          <li>Study Abraod Hong Kong: Winter 2014</li>
         </ul>
 
         <h2>Relevant Coursework</h2>
-        <ul>Current Classes
+        <ul>Current Classes:
           <li>Foundations of the Web-Intro to the Internet and the World Wide Web</li>
           <li>Intro to Web Development- basic principles of web development, intro to HTML and CSS</li>
         </ul>
-        <ul>Next Quarter
+        <ul>Next Quarter:
           <li>Intro to Javascript Programming for the Web<li>
           <li>Intro to Servers and Hosting</li>
         </ul>
-        <ul>Summer and Fall Quarters
+        <ul>Summer and Fall Quarters:
           <li>Building Javascript Applications for the Web</li>
           <li>User Science and Testing</li>
           <li>Professional Practice</li>
           <li>Web Development Capstone Project</li>
         </ul>
-        <p>Click <a href="http://webdev.seattleu.edu/courses.html">here</a> for course description in detail</p> 
+        <a href="http://webdev.seattleu.edu/courses.html">Full course descriptions</a>
       </section>
   
       <section class="dark">
