body text edited, about text edited

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 
   <div id="blur">
-    this is a background image
+    a
   </div>
   <header>
     <img src="images/self.png" alt="headshot of Arianna Marin">
@@ -19,13 +19,14 @@
     <h2>Objective:</h2>
       <p>To gain personal satisfaction as web development trainee, a position in which I am constantly learning, adapting to change, and being challenged. I already have a creative degree. I am currently studing web development and would like to apply my robust HTML/CSS skills towards real-world application. Seeking to utilize my evolving ablilites in a busy work environment while gaining experience in the web development industry.</p>
     <a href="mailto:marin.arianna@gmail.com" target="_top" class="btn">Email Arianna</a>
+    <a href="https://github.com/marinari" class="btn">My Github</a>
   </header>
 
   <div id="lcontainer">
 
       <section class="dark">
           <h2>About</h2>
-          <p>I am currently taking classes at Seattle University to become a web developer. I am self-motivated and I am passionate about programming, learning,  and service which I think matches well with Efelle's values. <p>
+          <p>I am currently taking classes at Seattle University to become a web developer. I am self-motivated and I am passionate about programming, learning, and service which I think matches well with Efelle's values. I started classes at Seattle University on the web development track in January. Before that, I did an extensive search looking for the perfect "coding school". I have attended numerous orientations for bootcamps. I feel proud and grateful that I found the Seattle U program. The robust curriculum builds a strong foundation for students to excel as web developers. It is not only about learning web technologies and learning how to code. It is about learning these skills in context of how it impacts consumers. Detailed course desctiption including links to the Seattle University Website are in the "Education" section. This webpage was created specifically to apply for a new position in between web developer intern and entry level web developer. This position would be a balance of duties between the two.<p>
       </section>
 
       <section class="light">
@@ -35,7 +36,7 @@
             <li>Over 3+ years of customer service. I am comfortable talking to people in a pleasant, professional manner. I am comfortable resolving conflicts with customers.<li>
             <li>Teamwork. I have experience working in small teams and coordinating with people in order to create an effiecient and transparent work environment.</li>
             <li>Organization. At my current job I have to manage various orders, filing, and tasks for a group of people. This forces me to be organized, things have to be ordered on time without gaps in supplies and my workspace has to be clear so other people can easily navigate it.</li>
-            <li>Avid, Passionate learner. I love learning about web development. I don't get frustrated easily and I see every obstacle as an opportunity to learn. Working on class projects and practicing programming on my own is exciting to me.</li>
+            <li>Avid, Passionate learner. I love learning about web development. I am a patient student and I see obstacles as an opportunity to learn. Working on class projects and practicing programming on my own is exciting to me.</li>
             <li>active listener-give examples</li>
           </ul>
           <ul>Technical Skills
@@ -49,7 +50,7 @@
 
       <section class="dark">
           <h2>Details</h2>
-          <p>Proposed Rate of Pay: $20-30/hr. Weekly Commitment: 25-35hrs. Rate of pay is based on fact that I am a non-traditional student. I already have a degree and one of the subjects (Graphic Design) can be directly applied to my work as a trainee web developer. I am over the traditional intern age and I support myself, I am not supported by my parents. Proposed weekly commitment is under 40 hours. This is so I am able to spend more time on making great projects in my schoolwork. It is flexible since some weeks may be busier or slower than others. Every minute of my paid time will be put to good use. For example, if there is nothing to work on programming wise I am open to taking on administrative or creative tasks. I noticed "Agency Life" section of your website is empty. Because I also studied photography I could create content for that in the way of photography.</p>
+          <p>Proposed Rate of Pay: $20-30/hr. Weekly Commitment: 25-35hrs. Rate of pay is based on fact that I am a non-traditional student. I have a degree and one of the subjects (Graphic Design) can be directly applied to my work as a trainee web developer. I am over the traditional intern age and I support myself. Proposed weekly commitment is under 40 hours. This is so I am able to spend more time on making great projects in my schoolwork. It is flexible because I anticipate that some weeks may be busier or slower than others. Every minute of my time spent at Efelle will be used productively. For example, if there is nothing to work on programming wise I am open to taking on administrative or creative tasks. I noticed "Agency Life" section of your website is empty. Because I also studied photography I could create content for that by creating images for that page. I am adaptable and it is easy for me to step into different roles as needed. I have a well-rounded set of skills outside of programming that I could apply to this position at Efelle.</p>
       </section>
 
 </div>
@@ -60,7 +61,7 @@
       <section class="light">
         <h2>Education</h2>
         <ul>
-          <li>Currently: Seattle University <a href="http//:webdev.seattleu.edu/">Web Development Certificate Program</a> <br>Anticipated Graduation: Fall 2016</li>
+          <li>Currently: Seattle University <a href="http://webdev.seattleu.edu/">Web Development Certificate Program</a> <br>Anticipated Graduation: Fall 2016</li>
           <li>Savannah College of Art and Design: BFA in Photography/Graphic Design minor <br>Graduated: Nov 2013</li>
           <li>Study Abraod Hong Kong: Winter 2014</li>
         </ul>
@@ -90,7 +91,7 @@
       
       <section class="light">
         <h2>Social Impact</h2>
-        <p>I noticed that you have a lot of women looking at your firm. You're probably already aware of the imbalance in the web development industry of men to women and white/Asian people to any other race. I am enthusistic about breaking that mold of what a developer is. Social movements like "#ILookLikeanEngineer" particularly resonate with me and I am eager to contribute to a field in which I am not well represented.</p>      
+        <p>The tech industry, historically, is not very diverse. I noticed immediately that your firm has a diverse work environment. I am passionate about programming and about breaking the mold of what a traditional developer is. Social movements like '#ILookLikeanEngineer' resonate with me and I look forward to redefining the parameters of who can code.</p>      
       </section>
 </div>
 
