project section content added

--- a/index.html
+++ b/index.html
@@ -85,8 +85,21 @@
       </section>
   
       <section class="dark">
-        <h2>Projects</h2>
-        <p></p>
+        <h2>Example Projects</h2>
+          <ul>CSS Zen Garden
+            <li><a href="https://github.com/marinari/wats1010-css-zen-garden">Project Repository</a></li>
+            <li><a href="http://marinari.github.io/wats1010-css-zen-garden/">Project Link</a></li>
+          </ul>
+
+          <ul>Embedded Media
+            <li><a href="https://github.com/marinari/wats1010-embedded-media">Project Repository</a></li>
+            <li><a href="http://marinari.github.io/wats1010-css-zen-garden/">Project Link</a></li>
+          </ul>
+
+          <ul>Advanced Markup
+            <li><a href="https://github.com/marinari/wats1010-adv-markup">Project Repository</a></li>
+            <li><a href="http://marinari.github.io/wats1010-adv-markup/">Project Link</a></li>
+          </ul>
       </section>
       
       <section class="light">
